# hack_the_track

./: .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  quickstart.ps1  quickstart.sh
backend/: Dockerfile  README.md  example.py  load_gps_data.py  main.py  pyproject.toml  scoring.py
backend/fastapi/: Dockerfile
backend/inference/: __init__.py  constants.py  control_change.py  control_change_preoptimizer.ipynb  insights.py  prediction.py  run_inference.py
backend/inference/evaluation/: StatePosition.py  __init__.py  evaluation.py  scoring.py
backend/inference/models/: RNN.py  __init__.py  car13_multistep_model.pt  car13_multistep_scaler.pkl  data_clean.py  multicar_model.pt  multicar_multistep_model.pt  multicar_multistep_scaler.pkl  multicar_scaler.pkl  new_multicar_multistep_model.pt  new_multicar_multistep_scaler.pkl
backend/inference/prediction/: CarSequenceDataset.py  CarTrajectoryPredictor.py  __init__.py  plotting.py  prediction.py  preprocessing.py
backend/telemetry/: NN.py  SequenceDataset.py  backup_car13.ipynb  backup_test_car_13.ipynb  barber_track_allLaps.py  car13_10s.pt  car13_multistep_scaler.pkl  car13_seq2seq_model.pt  car2.ipynb  check_script.pu.py  data_cleaning.py  data_optimiser_preprocessing.ipynb  dataset_car2.py  docker-compose.yaml  example.py  example_NN.ipynb  pyproject.toml  replayer.Dockerfile  test_car_13.ipynb  train_rnn.ipynb  train_rnn_new.ipynb
backend/telemetry/aligned/: tick_consumer.py
backend/telemetry/inference/: car13_multistep_model.pt
backend/tickdb-init/: 001_init.sql
(+49 files in other folders)
