[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
